--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,11 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "GenesisHenriques",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-rescue": "^1.1.31",
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
+    "nodemon": "^2.0.15",
     "restify": "^8.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
