--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "mocha ./tests/**/*$NAME*.test.js --exit"
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit",
+    "tests": "jest"
   },
   "author": "GenesisHenriques",
   "license": "ISC",
@@ -14,9 +15,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-rescue": "^1.1.31",
+    "jest": "^27.5.1",
     "mongodb": "^4.3.1",
-    "mongoose": "^6.2.1",
-    "restify": "^8.6.1"
+    "mongodb-memory-server": "^8.3.0",
+    "mongodb-memory-server-core": "^8.3.0",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "chai": "^4.3.6",
@@ -26,10 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.5.1",
     "mocha": "^9.2.0",
-    "mongodb-memory-server": "^6.9.6",
-    "nodemon": "^2.0.15",
     "sinon": "^13.0.1"
   }
 }
