--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,6 +12,7 @@
   "author": "GenesisHenriques",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-rescue": "^1.1.31",
