--- a/BackEnd/.eslintrc.json
+++ b/BackEnd/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es2021": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "eslint:recommended",
@@ -18,5 +19,8 @@
         "react"
     ],
     "rules": {
+        "no-unused-vars": 0,
+        "no-console": 0,
+        "import/no-extraneous-dependencies": 0
     }
 }
