--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit",
+    "tests": "jest"
   },
   "author": "GenesisHenriques",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express": "^4.17.2",
     "express-rescue": "^1.1.31",
     "mongodb": "^4.3.1",
+    "mongodb-memory-server": "^8.3.0",
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
     "restify": "^8.6.1",
